updated the method for filtering out developers.facebook.com and Google+ Hangouts. Should provide better usability now. These exceptions are labeled as such and checked for. This can be extended to as many exceptions as needed. Also removed the pesky scrollbars

--- a/app/manifest.json
+++ b/app/manifest.json
@@ -16,8 +16,7 @@
   "content_scripts": [
     {
       "matches": [
-        "*://www.facebook.com/*",
-        "*://facebook.com/*",
+        "*://*.facebook.com/*",
         "*://*.twitter.com/*",
         "*://*.reddit.com/*",
         "*://*.tumblr.com/*",
@@ -31,8 +30,7 @@
     },
     {
       "matches": [
-        "*://www.facebook.com/*",
-        "*://facebook.com/*",
+        "*://*.facebook.com/*",
         "*://*.twitter.com/*",
         "*://*.reddit.com/*",
         "*://*.tumblr.com/*",
